Bug 1819025 - Don't consider following join-controls when determining whether a space is collapsible. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D171061